--- a/data/tairos/player_cards.yml
+++ b/data/tairos/player_cards.yml
@@ -31,12 +31,12 @@
   :type: "Action"
   :icon: "shield-bash"
   :border_color: "#b10"
-  :line1: "<b>Stun</b> an enemy you are"
-  :line2: "engaged with."
-  :line3: "<b>Combo</b>: <i>Polish</i>"
-  :line4: "You may add up to two"
-  :line5: "discarded <i>Defend</i> cards"
-  :line6: "to your hand."
+  :line1: "<i>Can only target an enemy</i>"
+  :line2: "<i>you are engaged with.</i>"
+  :line3: "<b>Tuck</b>: This enemy can't attack."
+  :line4: "Discard at end of Enemy Phase."
+  :line5: "<b>Combo</b>: <i>Polish</i>"
+  :line6: "<b>Scry 3</b>"
 
 # Bowmaster - BLACK
 -
@@ -58,11 +58,11 @@
   :icon: "dodging"
   :border_color: "#ccc"
   :line1: "Play when you are targeted."
-  :line2: "<b>Block 2</b> and/or"
-  :line3: "prevent 1 status effect."
+  :line2: "<b>Block 2</b> and/or prevent"
+  :line3: "one effect targeting you."
   :line4: "<b>Combo</b>: <i>Evade</i>"
-  :line5: "Prevent ALL damage and"
-  :line6: "effects."
+  :line5: "Prevent ALL damage and effects"
+  :line6: "targeting you this round."
 -
   :deck: "Bowmaster"
   :title: "Dash"
@@ -74,7 +74,7 @@
   :line3: "<i>once per round</i>"
   :line4: "<b>Combo</b>: <i>Sprint</i>"
   :line5: "You may take an <i>additional</i>"
-  :line6: "action this round."
+  :line6: "<b>Action</b> this round."
 
 # Elementalist - BLUE
 -
@@ -84,8 +84,8 @@
   :icon: "flamer"
   :border_color: "#0ff"
   :line1: "<b>Attack 3</b>"
-  :line2: "The next attack on this"
-  :line3: "enemy gains <b>+2 Attack</b>."
+  :line2: "The next attack on this enemy"
+  :line3: "this round gains <b>+2 Attack</b>."
   :line4: "<b>Combo</b>: <i>Flare</i>"
   :line5: "<b>+2 Attack</b> and <b>Draw 1</b>"
   :line6: ""
@@ -96,11 +96,11 @@
   :icon: "beveled-star"
   :border_color: "#0ff"
   :line1: "<b>Attack 3</b>"
-  :line2: "Ignore <b>Block</b> and <b>Hunter</b>"
-  :line3: "abilities on this enemy until"
-  :line4: "the end of your next turn."
-  :line5: "<b>Combo</b>: <i>Freeze</i>"
-  :line6: "<b>Stun</b> the target."
+  :line2: "TODO"
+  :line3: ""
+  :line4: "<b>Combo</b>: <i>Freeze</i>"
+  :line5: "<b>Tuck</b>: This enemy can't attack."
+  :line6: "Discard at end of Enemy Phase."
 -
   :deck: "Elementalist"
   :title: "Shock"
@@ -108,8 +108,8 @@
   :icon: "electric"
   :border_color: "#0ff"
   :line1: "Play when you are attacked."
-  :line2: "<b>Block 1</b> and <b>Attack 2</b>"
-  :line3: "(target your attacker)"
+  :line2: "<b>Block 1</b>"
+  :line3: "<b>Attack 2</b> (target your attacker)"
   :line4: "<b>Combo</b>: <i>Conduct</i>"
   :line5: "<b>Charge</b> this card and"
   :line6: "the card you played with it."
@@ -404,8 +404,8 @@
   :icon: "battle-axe" # TODO
   :border_color: "#02f"
   :line1: "Play when you are attacked."
-  :line2: "<b>Block 1</b> and <b>Draw 1</b>"
-  :line3: ""
+  :line2: "<b>Block 1</b>"
+  :line3: "<b>Draw 1</b>"
   :line4: "<b>Combo</b>: <i>Confuse</i>"
   :line5: "Your attacker attacks another"
   :line6: "enemy instead."
@@ -493,11 +493,11 @@
   :type: "Reaction"
   :icon: "spiky-wing"
   :border_color: "#b10"
-  :line1: "Play when you are attacked."
-  :line2: "<b>Block X</b> where X is half of the"
-  :line3: "attack's damage, rounded up."
-  :line4: "<b>Combo</b>: <i>Soar</i>"
-  :line5: "Prevent ALL incoming damage."
+  :line1: "Play ."
+  :line2: ""
+  :line3: ""
+  :line4: ""
+  :line5: ""
   :line6: ""
 
 # Swarmkeeper - BLACK
@@ -559,7 +559,7 @@
   :border_color: "#02f"
   :line1: "Play when you are attacked."
   :line2: "<b>Block 1</b>"
-  :line3: "You may <b>Charge</b> this card."
+  :line3: "<b>Charge</b> this card."
   :line4: "<b>Combo</b>: <i>Learn</i>"
   :line5: "Gain your attacker's abilities"
   :line6: "this round."
