--- a/data/tairos/player_cards.yml
+++ b/data/tairos/player_cards.yml
@@ -9,10 +9,10 @@
   :border_color: "#b10"
   :line1: "<b>Attack 3</b>"
   :line2: "If the target attacked you"
-  :line3: "this round, <b>+2 Attack</b>."
+  :line3: "this round, <b>+2 Power</b>."
   :line4: "<b>Combo</b>: <i>Cleave</i>"
   :line5: "<b>Attack 3</b>"
-  :line6: "(targeting an adjacent enemy)"
+  :line6: "(target a different enemy)"
 -
   :deck: "Guardian"
   :title: "Defend"
@@ -31,10 +31,10 @@
   :type: "Action"
   :icon: "shield-bash"
   :border_color: "#b10"
-  :line1: "<i>Can only target an enemy</i>"
-  :line2: "<i>you are engaged with.</i>"
-  :line3: "<b>Tuck</b>: This enemy can't attack."
-  :line4: "Discard at end of Enemy Phase."
+  :line1: "<b>Attack 1</b>"
+  :line2: "Skip the target's next attack."
+  :line3: "<i>Can only target an enemy</i>"
+  :line4: "<i>you are engaged with.</i>"
   :line5: "<b>Combo</b>: <i>Polish</i>"
   :line6: "<b>Scry 3</b>"
 
@@ -47,7 +47,7 @@
   :border_color: "#ccc"
   :line1: "<b>Attack 3</b>"
   :line2: "If you've taken no damage"
-  :line3: "this round, <b>+2 Attack</b>."
+  :line3: "this round, <b>+2 Power</b>."
   :line4: "<b>Combo</b>: <i>Volley</i>"
   :line5: "<b>Attack All 2</b>"
   :line6: ""
@@ -85,34 +85,34 @@
   :border_color: "#0ff"
   :line1: "<b>Attack 3</b>"
   :line2: "The next attack on this enemy"
-  :line3: "this round gains <b>+2 Attack</b>."
+  :line3: "this round gains <b>+2 Power</b>."
   :line4: "<b>Combo</b>: <i>Flare</i>"
-  :line5: "<b>+2 Attack</b> and <b>Draw 1</b>"
-  :line6: ""
+  :line5: "<b>+2 Power</b>"
+  :line6: "<b>Draw 1</b>"
 -
   :deck: "Elementalist"
   :title: "Frost"
-  :type: "Action"
+  :type: "Reaction"
   :icon: "beveled-star"
   :border_color: "#0ff"
-  :line1: "<b>Attack 3</b>"
-  :line2: "TODO"
-  :line3: ""
+  :line1: "Play when an enemy attacks."
+  :line2: "<b>Block 1</b>"
+  :line3: "<b>Attack 2</b> (target the attacker)"
   :line4: "<b>Combo</b>: <i>Freeze</i>"
-  :line5: "<b>Tuck</b>: This enemy can't attack."
-  :line6: "Discard at end of Enemy Phase."
+  :line5: "Prevent ALL damage from"
+  :line6: "the target this round."
 -
   :deck: "Elementalist"
   :title: "Shock"
-  :type: "Reaction"
+  :type: "Action"
   :icon: "electric"
   :border_color: "#0ff"
-  :line1: "Play when you are attacked."
-  :line2: "<b>Block 1</b>"
-  :line3: "<b>Attack 2</b> (target your attacker)"
+  :line1: "<b>Attack All 1</b>"
+  :line2: "<b>+1 Power</b> for each <i>Shock</i>"
+  :line3: "in your discard."
   :line4: "<b>Combo</b>: <i>Conduct</i>"
   :line5: "<b>Charge</b> this card and"
-  :line6: "the card you played with it."
+  :line6: "the card you played it with."
 
 # Tactician - GREEN
 -
@@ -122,10 +122,10 @@
   :icon: "heart-plus"
   :border_color: "#492"
   :line1: "<b>Restore Ally 2</b> <i>multi-target</i>"
-  :line2: "Target ally may remove one"
-  :line3: "<b>Fatigue</b> or <b>Stun</b>."
+  :line2: "Target ally may add one card"
+  :line3: "from their discard to their hand."
   :line4: "<b>Combo</b>: <i>Strengthen</i>"
-  :line5: "Target ally gains <b>+4 Attack</b>"
+  :line5: "Target ally gains <b>+3 Power</b>"
   :line6: "on their next attack."
 -
   :deck: "Tactician"
@@ -133,7 +133,7 @@
   :type: "Action"
   :icon: "team-upgrade"
   :border_color: "#492"
-  :line1: "All allies may <b>Draw 1</b>"
+  :line1: "All allies may <b>Draw 1</b>."
   :line2: "You may take another <b>Action</b>."
   :line3: "<i>once per round</i>"
   :line4: "<b>Combo</b>: <i>Rally</i>"
@@ -148,9 +148,9 @@
   :line1: "Play when an ally attacks."
   :line2: "<b>Attack 3</b>"
   :line3: "(target the same enemy)"
-  :line4: "If another ally attacked"
-  :line5: "the target this round,"
-  :line6: "<b>+2 Attack</b>."
+  :line4: "If the target was already"
+  :line5: "attacked this round, <b>+2 Power</b>."
+  :line6: ""
 
 ## SET TWO
 
@@ -161,12 +161,12 @@
   :type: "Action"
   :icon: "charging-bull"
   :border_color: "#f31"
-  :line1: "<b>Attack 5</b>"
-  :line2: "You suffer 1 damage."
-  :line3: "You may gain <b>Fatigue</b>"
-  :line4: "to gain <b>+2 Attack</b>."
-  :line5: "<b>Combo</b>: <i>Takedown</i>"
-  :line6: "<b>Stun</b> the target."
+  :line1: "<b>Attack 3</b>"
+  :line2: "You may suffer 1 damage and"
+  :line3: "<b>Discard 1</b> to gain <b>+3 Power</b>."
+  :line4: "<b>Combo</b>: <i>Takedown</i>"
+  :line5: "Suffer 2 damage to gain"
+  :line6: "<b>+4 Power</b>."
 -
   :deck: "Brawler"
   :title: "Flurry"
@@ -175,10 +175,10 @@
   :border_color: "#f31"
   :line1: "<b>Attack 3</b> <i>Multi-target</i>"
   :line2: "<b>Mill</b> up to 3 cards"
-  :line3: "to gain <b>+1 Attack</b> per card."
+  :line3: "to gain <b>+1 Power</b> per card."
   :line4: "<b>Combo</b>: <i>Finisher</i>"
   :line5: "<b>Mill</b> up to 2 more cards"
-  :line6: "to gain <b>+2 Attack</b> per card."
+  :line6: "to gain <b>+2 Power</b> per card."
 -
   :deck: "Brawler"
   :title: "Counter"
@@ -202,16 +202,16 @@
   :line1: "<b>Attack 3</b>"
   :line2: "<b>Draw 1</b>"
   :line3: "If this defeats an enemy,"
-  :line4: "<b>Restore Self 2</b>"
-  :line5: "<b>Combo</b>: <i>Venom</i>"
-  :line6: "<b>+3 Attack</b> and ignore <b>Block</b>"
+  :line4: "<b>Charge</b> the enemy card."
+  :line5: "<b>Combo</b>: <i>Syphon</i>"
+  :line6: "<b>Restore Self 2</b>"
 -
   :deck: "Shadow"
   :title: "Misdirect"
   :type: "Reaction"
   :icon: "avoidance"
   :border_color: "#666"
-  :line1: "Play when you are attacked."
+  :line1: "Play when an enemy attacks."
   :line2: "<b>Block 1</b>"
   :line3: "<b>Attack 2</b>"
   :line4: "(target a different enemy)"
@@ -253,8 +253,8 @@
   :line2: "<b>Block 2</b> <i>multi-target</i>"
   :line3: "You may discard up to 2 cards"
   :line4: "to gain <b>+2 Block</b> per card."
-  :line5: "<b>Combo</b>: <i>Sacrifice</i>"
-  :line6: "Gain <b>Fatigue</b> and <b>+3 Block</b>."
+  :line5: "<b>Combo</b>: <i>Ward</i>"
+  :line6: "Prevent all effects of the attack."
 -
   :deck: "Arcanist"
   :title: "Unleash"
@@ -263,10 +263,10 @@
   :border_color: "#02f"
   :line1: "<b>Attack 2</b> <i>multi-target</i>"
   :line2: "You may discard up to 2 cards"
-  :line3: "to gain <b>+3 Attack</b> per card."
+  :line3: "to gain <b>+3 Power</b> per card."
   :line4: "<b>Combo</b>: <i>Exhaust</i>"
-  :line5: "Suffer 2 damage and gain"
-  :line6: "<b>Fatigue</b> to gain <b>+5 Attack</b>."
+  :line5: "Suffer 3 damage to gain"
+  :line6: "<b>+5 Power</b>."
 
 # Squire - GREEN
 -
@@ -280,7 +280,7 @@
   :line3: "<b>Block 1</b>, <b>Attack 1</b>, and <b>Draw 1</b>"
   :line4: "(target the attacking enemy)"
   :line5: "<b>Combo</b>: <i>Intervene</i>"
-  :line6: "<b>+2 Block</b> and <b>+2 Attack</b>"
+  :line6: "<b>+2 Block</b> and <b>+2 Power</b>"
 -
   :deck: "Squire"
   :title: "Recover"
@@ -316,11 +316,11 @@
   :icon: "hammer-drop"
   :border_color: "#b10"
   :line1: "<b>Attack 3</b>"
-  :line2: ""
-  :line3: ""
+  :line2: "The next ally to attack the target"
+  :line3: "this round may <b>Draw 1</b>."
   :line4: "<b>Combo</b>: <i>Pulverize</i>"
-  :line5: "<b>+4 Attack</b>"
-  :line6: ""
+  :line5: "Gain <b>+3 Power</b> and this attack"
+  :line6: "ignores enemy <b>Block</b>."
 -
   :deck: "Juggernaut"
   :title: "Endure"
@@ -357,20 +357,20 @@
   :line2: "<b>Draw 1</b>"
   :line3: "You may take another <b>Action</b>."
   :line4: "<b>Combo</b>: <i>Rend</i>"
-  :line5: "<b>Tuck</b>: All attacks against this"
-  :line6: "enemy gain <b>+1 Attack</b>."
+  :line5: "All attacks against this enemy"
+  :line6: "this round gain <b>+2 Power</b>."
 -
   :deck: "Jackknife"
   :title: "Venomize"
   :type: "Reaction"
   :icon: "dripping-blade"
   :border_color: "#ccc"
-  :line1: ""
-  :line2: ""
-  :line3: ""
-  :line4: ""
-  :line5: ""
-  :line6: ""
+  :line1: "Play when you attack."
+  :line2: "This attack gains <b>+3 Power</b>"
+  :line3: "and ignores enemy <b>Block</b>."
+  :line4: "<b>Combo</b>: <i>Inject</i>"
+  :line5: "The next attack on this enemy"
+  :line6: "this round deals <b>x2</b> damage."
 -
   :deck: "Jackknife"
   :title: "Reposition"
@@ -381,7 +381,7 @@
   :line2: "an enemy."
   :line3: "<b>Draw 2</b>"
   :line4: "<b>Combo</b>: <i>Trip</i>"
-  :line5: "That enemy gains <b>-3 Attack</b>"
+  :line5: "Skip that enemy's attack"
   :line6: "this round."
 
 # Illusionist - BLUE
@@ -389,19 +389,19 @@
   :deck: "Illusionist"
   :title: "Fear"
   :type: "Action"
-  :icon: "battle-axe" # TODO
+  :icon: "daemon-skull"
   :border_color: "#02f"
   :line1: "<b>Attack 3</b>"
-  :line2: "If the target has ≤ 10 HP,"
-  :line3: "<b>+2 Attack</b>."
+  :line2: "If the target has less than"
+  :line3: "10 HP, <b>+2 Power</b>."
   :line4: "<b>Combo</b>: <i>Terrorize</i>"
-  :line5: "<b>Stun</b> the target."
-  :line6: ""
+  :line5: "If the target has less than 10 HP"
+  :line6: "before your attack, defeat it."
 -
   :deck: "Illusionist"
   :title: "Charm"
   :type: "Reaction"
-  :icon: "battle-axe" # TODO
+  :icon: "star-swirl"
   :border_color: "#02f"
   :line1: "Play when you are attacked."
   :line2: "<b>Block 1</b>"
@@ -413,7 +413,7 @@
   :deck: "Illusionist"
   :title: "Duplicate"
   :type: "???"
-  :icon: "battle-axe" # TODO
+  :icon: "mirror-mirror"
   :border_color: "#02f"
   :line1: "Copy a card that was"
   :line2: "played this round."
@@ -427,31 +427,31 @@
   :deck: "Apothecary"
   :title: "Contaminate"
   :type: "Action"
-  :icon: "battle-axe" # TODO
+  :icon: "biohazard"
   :border_color: "#4d4"
   :line1: "The next attack on target"
-  :line2: "enemy gains <b>+4 Attack</b>."
+  :line2: "enemy gains <b>+4 Power</b>."
   :line3: "<b>Combo</b>: <i>Melt</i>"
-  :line4: "<b>Tuck</b>: If this enemy is"
-  :line5: "not <i>Elite</i>, it has no"
-  :line6: "text or abilities."
+  :line4: "If the target is not <i>Elite</i>,"
+  :line5: "ignore its text and abilities"
+  :line6: "until the end of next round."
 -
   :deck: "Apothecary"
   :title: "Heal"
   :type: "Action"
-  :icon: "battle-axe" # TODO
+  :icon: "potion-ball"
   :border_color: "#4d4"
   :line1: "<b>Restore 3</b>"
-  :line2: "The target gains <b>Fatigue</b>."
-  :line3: ""
-  :line4: "<b>Combo</b>: <i>Envigorate</i>"
-  :line5: "The target may <b>Draw 2</b>."
+  :line2: "The target must <b>Discard 1</b>."
+  :line3: "<b>Restore Self 1</b>"
+  :line4: "<b>Combo</b>: <i>Invigorate</i>"
+  :line5: "Target ally may <b>Draw 2</b>."
   :line6: ""
 -
   :deck: "Apothecary"
   :title: "Mix"
   :type: "Action"
-  :icon: "battle-axe" # TODO
+  :icon: "pestle-mortar"
   :border_color: "#4d4"
   :line1: "Give an ally a card from"
   :line2: "your hand, then"
@@ -471,7 +471,7 @@
   :border_color: "#b10"
   :line1: "<b>Attack 3</b>"
   :line2: "If the target does NOT have"
-  :line3: "<b>Block</b>, gain <b>+2 Attack</b>."
+  :line3: "<b>Block</b>, gain <b>+2 Power</b>."
   :line4: "<b>Combo</b>: <i>Swipe</i>"
   :line5: "<b>Attack All 2</b>"
   :line6: ""
@@ -483,22 +483,22 @@
   :border_color: "#b10"
   :line1: "<b>Scry 2</b>"
   :line2: "<b>Draw 1</b>"
-  :line3: "<b>Restore Self 1</b>"
-  :line4: "<b>Combo</b>: <i>Scout</i>"
-  :line5: "All allies may <b>Scry 2</b>."
-  :line6: ""
+  :line3: "You may take another <b>Action</b>."
+  :line4: "<i>once per round</i>"
+  :line5: "<b>Combo</b>: <i>Scout</i>"
+  :line6: "All allies may <b>Scry 2</b>."
 -
   :deck: "The Beast"
   :title: "Glide"
   :type: "Reaction"
   :icon: "spiky-wing"
   :border_color: "#b10"
-  :line1: "Play ."
-  :line2: ""
-  :line3: ""
-  :line4: ""
-  :line5: ""
-  :line6: ""
+  :line1: "Play when you are attacked."
+  :line2: "You may immediately play"
+  :line3: "an <b>Action</b> from your hand."
+  :line4: "<i>once per round</i>"
+  :line5: "<b>Combo</b>: <i>Maneuver</i>"
+  :line6: "<b>Block 2</b> and <b>Draw 1</b>"
 
 # Swarmkeeper - BLACK
 -
@@ -533,10 +533,10 @@
   :border_color: "#ccc"
   :line1: "Play when an enemy attacks."
   :line2: "<b>Block 1</b>"
-  :line3: "Anyone may become the target."
-  :line4: "<b>Combo</b>: <i>Wrap</i>"
-  :line5: "<b>Stun</b> the attacking enemy"
-  :line6: "for this attack."
+  :line3: "Anyone may become the target"
+  :line4: "of the attack."
+  :line5: "<b>Combo</b>: <i>Wrap</i>"
+  :line6: "Prevent the attack."
 
 # Artificer - BLUE
 -
@@ -546,7 +546,7 @@
   :icon: "battle-axe" # TODO
   :border_color: "#02f"
   :line1: "<b>Attack 2</b>"
-  :line2: "You may <b>Charge</b> this card."
+  :line2: "<b>Charge</b> this card."
   :line3: ""
   :line4: "<b>Combo</b>: <i>Accelerate</i>"
   :line5: "<b>Draw 2</b> then <b>Charge</b> a"
