some more stuff

--- a/data/tairos/artifacts.yml
+++ b/data/tairos/artifacts.yml
@@ -1,82 +1,82 @@
 -
   :deck: "Artifact"
-  :title: "Fire Breath Amulet"
+  :title: "Dragon Amulet"
   :type: "Artifact"
   :icon: "intricate-necklace"
-  :border_color: "#b95"
-  :line1: "<i>Free Action</i> - 2 Charges"
+  :border_color: "#ffc000"
+  :line1: "<i>Searing Blast</i> — 2 Charges"
   :line2: "Target enemy suffers 3 damage."
   :line3: "<i>once per turn</i>"
-  :line4: "<i>Free Action</i> - 3 Charges"
+  :line4: "<i>Sea of Flame</i> — 3 Charges"
   :line5: "ALL enemies suffer 2 damage."
   :line6: "<i>once per turn</i>"
 -
   :deck: "Artifact"
-  :title: "Rod of Healing"
+  :title: "Angel Staff"
   :type: "Artifact"
   :icon: "winged-scepter"
-  :border_color: "#b95"
-  :line1: "<i>Free Action</i> - 2 Charges"
-  :line2: "Choose 1:"
-  :line3: "- <b>Restore 2</b>"
-  :line4: "- Remove 1 status effect"
-  :line5: "<i>Free Action</i> - 3 Charges"
-  :line6: "<b>Refresh</b> ANY player deck."
+  :border_color: "#ffc000"
+  :line1: "<i>Angelic Embrace</i> — 2 Charges"
+  :line2: "<b>Restore 2</b>"
+  :line3: "<i>once per turn </i>"
+  :line4: "<i>Wave of Comfort</i> — 3 Charges"
+  :line5: "<b>Restore All 1</b>"
+  :line6: "<i>once per turn </i>"
 -
   :deck: "Artifact"
   :title: "Orb of the Seer"
   :type: "Artifact"
   :icon: "dragon-orb"
-  :border_color: "#b95"
-  :line1: "<i>Free Action</i> - 3 Charges"
-  :line2: "Look at the top five cards of"
-  :line3: "one of your decks. You may"
-  :line4: "discard any number of them"
-  :line5: "and put the rest back"
-  :line6: "in any order."
+  :border_color: "#ffc000"
+  :line1: "<i>Minor Prophecy</i> — 2 Charges"
+  :line2: "<b>Scry 3</b>"
+  :line3: "<i>Major Prophecy</i> — 3 Charges"
+  :line4: "<b>Scry 5</b>"
+  :line5: "You may discard any number of"
+  :line6: "cards you see during this scry."
 -
   :deck: "Artifact"
   :title: "Belt of the Swift"
   :type: "Artifact"
-  :icon: "cloak"
-  :border_color: "#b95"
-  :line1: "<i>Free Action</i> - 2 Charges"
-  :line2: "<b>Draw 1</i>"
-  :line3: "<i>Free Action</i> - 2 Charges"
-  :line4: "<b>Refresh</b> one of your decks."
-  :line5: ""
-  :line6: ""
+  :icon: "black-belt"
+  :border_color: "#ffc000"
+  :line1: "<i>Surge</i> — 3 Charges"
+  :line2: "Play an <b>Action</b> from hand."
+  :line3: "<i>Rapid Strikes</i> — 4 Charges"
+  :line4: "<b>Draw 4</b> then <b>Discard 4</b>"
+  :line5: "For each <b>Reaction</b> discarded,"
+  :line6: "target enemy suffers 1 damage."
 -
   :deck: "Artifact"
   :title: "Storm Crystal"
   :type: "Artifact"
   :icon: "unstable-orb"
-  :border_color: "#b95"
-  :line1: "<i>Free Action</i> - 1 Charge"
+  :border_color: "#ffc000"
+  :line1: "<i>Jolt</i> — 1 Charge"
   :line2: "Your next attack ignores <b>Block</b>."
-  :line3: "<i>Passive</i>"
+  :line3: "<i>Raging Storm</i> — Passive"
   :line4: "When you draw one or more"
-  :line5: "cards outside of your <b>Draw Step</b>,"
+  :line5: "cards outside your <b>Draw Step</b>,"
   :line6: "target enemy suffers 1 damage."
 -
   :deck: "Artifact"
   :title: "Token of Luck"
   :type: "Artifact"
   :icon: "rupee"
-  :border_color: "#b95"
-  :line1: "<i>Free Action</i> - 3 Charges"
+  :border_color: "#ffc000"
+  :line1: "<i>Tempt Fate</i> — 3 Charges"
   :line2: "Name a card."
-  :line3: "Reveal the top 3 cards of one"
-  :line4: "of your decks. If you reveal the"
-  :line5: "named card, you may play it."
-  :line6: "Discard the rest."
+  :line3: "<b>Scry 3</b>"
+  :line4: "If you see the named card,"
+  :line5: "you may play it for free."
+  :line6: ""
 -
   :deck: "Artifact"
   :title: "Cloak of Recovery"
   :type: "Artifact"
-  :icon: "black-belt"
-  :border_color: "#b95"
-  :line1: "<i>Free Action</i> - 4 Charges"
+  :icon: "cloak"
+  :border_color: "#ffc000"
+  :line1: "<i>Second Wind</i> — 4 Charges"
   :line2: "<b>Refresh</b> ANY player deck."
   :line3: "You and the owner of the deck"
   :line4: "<b>Draw 1</b>."
@@ -87,10 +87,10 @@
   :title: "Tome of Tactics"
   :type: "Artifact"
   :icon: "enlightenment"
-  :border_color: "#b95"
-  :line1: "<i>Free Action</i> - 1 Charge"
-  :line2: "<b>Draw 1</b> then <b>Discard 1</b>."
-  :line3: "<i>Passive</i>"
+  :border_color: "#ffc000"
+  :line1: "<i>Regroup</i> — 3 Charge"
+  :line2: "<b>Draw 3</b> then <b>Discard 2</b>"
+  :line3: "<i>Tactical Retreat</i> — Passive"
   :line4: "When you <b>Refresh</b> a deck, you"
   :line5: "may leave up to 4 cards in"
   :line6: "its discard pile."
@@ -98,23 +98,23 @@
   :deck: "Artifact"
   :title: "Golden Hourglass"
   :type: "Artifact"
-  :icon: "battle-axe" # TODO
-  :border_color: "#b95"
-  :line1: "<i>Free Action</i> - 5 Charges"
-  :line2: ""
-  :line3: "Take another turn after"
-  :line4: "this one."
-  :line5: ""
+  :icon: "empty-hourglass"
+  :border_color: "#ffc000"
+  :line1: "<i>Rewind</i> — 3 Charges"
+  :line2: "Add a card from your discard"
+  :line3: "piles to your hand."
+  :line4: "<i>Time Warp</i> — 5 Charges"
+  :line5: "Take an extra turn this round."
   :line6: ""
 -
   :deck: "Artifact"
   :title: "Enigmatic Device"
   :type: "Artifact"
-  :icon: "battle-axe" # TODO
-  :border_color: "#b95"
-  :line1: "<i>Free Action</i> - 1 Charge"
+  :icon: "big-gear"
+  :border_color: "#ffc000"
+  :line1: "<i>Shift</i> — 1 Charge"
   :line2: "Give a card to another"
-  :line3: "player or take a card"
+  :line3: "player OR take a card"
   :line4: "from another player."
-  :line5: "<i>Passive</i>"
-  :line6: "+1 max hand size"
+  :line5: "<i>Hidden Cache</i> — Passive"
+  :line6: "+2 max hand size"
