--- a/data/tairos/devastations.yml
+++ b/data/tairos/devastations.yml
@@ -3,10 +3,10 @@
   :title: "Mass Plague"
   :type: "Devastation"
   :icon: "death-juice"
-  :border_color: "#111"
-  :line1: "All players must discard a card."
-  :line2: "If they cannot, they take 2"
-  :line3: "damage."
+  :border_color: "#c21e56"
+  :line1: "All players must <b>Discard 1</b>."
+  :line2: "If a player cannot, they"
+  :line3: "suffer 2 damage."
   :line4: ""
   :line5: "Repeat this effect 3 more times."
   :line6: ""
@@ -15,7 +15,7 @@
   :title: "Scorched Earth"
   :type: "Devastation"
   :icon: "burning-forest"
-  :border_color: "#111"
+  :border_color: "#c21e56"
   :line1: "Remove <i>all</i> discarded cards"
   :line2: "from the game."
   :line3: ""
@@ -27,7 +27,7 @@
   :title: "Necromancy"
   :type: "Devastation"
   :icon: "crowned-skull"
-  :border_color: "#111"
+  :border_color: "#c21e56"
   :line1: "Increase the maximum number"
   :line2: "of enemies by 1."
   :line3: ""
