--- a/data/tairos/enemies.yml
+++ b/data/tairos/enemies.yml
@@ -9,8 +9,8 @@
   :attack: "4"
   :line1: "When <i>Toxic Toad</i> is defeated,"
   :line2: "the player it's engaged with"
-  :line3: "must <b>Discard 2</b>."
-  :line4: ""
+  :line3: "must <b>Discard 2</b> or suffer"
+  :line4: "5 damage."
 -
   :deck: "Enemy"
   :title: "Harpy"
@@ -19,10 +19,10 @@
   :border_color: "#444"
   :hp: "12"
   :attack: "4"
-  :line1: "<b>Block 1</b>"
-  :line2: "<b>Hunter</b>: Least cards in hand"
-  :line3: "<b>Engage</b>: Gain <b>Fatigue</b>"
-  :line4: ""
+  :line1: "<b>Hunter</b>: Least cards in hand"
+  :line2: "<b>Engage</b>: <b>Discard 1</b>"
+  :line3: "Ignores all damage from attacks"
+  :line4: "with 3 or less power."
 -
   :deck: "Enemy"
   :title: "Armored Orc"
@@ -54,23 +54,23 @@
   :icon: "spectre"
   :border_color: "#444"
   :hp: "15"
-  :attack: "???"
+  :attack: "4"
   :line1: "<b>Hunter</b>: Most cards in hand"
-  :line2: "<i>Mana Wraith</i>'s ATK is equal to"
-  :line3: "the number of cards in its"
-  :line4: "target's hand (minimum 3 ATK)."
+  :line2: "Any player who suffers damage"
+  :line3: "from <i>Mana Wraith</i> must"
+  :line4: "<b>Mill 3</b>."
 -
   :deck: "Enemy"
   :title: "Serpent Assassin"
   :type: "Enemy"
   :icon: "horned-reptile"
   :border_color: "#444"
-  :hp: "8"
-  :attack: "6"
+  :hp: "10"
+  :attack: "5"
   :line1: "<b>Hunter</b>: Least <b>Health</b>"
-  :line2: "<b>Encounter</b>: The player"
-  :line3: "with the least <b>Health</b>"
-  :line4: "gains <b>Stun</b>."
+  :line2: "While <i>Serpent Assassin</i> is alive,"
+  :line3: "the player engaged with it"
+  :line4: "cannot play cards from hand."
 -
   :deck: "Enemy"
   :title: "Noxious Beast"
@@ -80,21 +80,21 @@
   :hp: "14"
   :attack: "3"
   :line1: "<b>Block 1</b>"
-  :line2: "Any player damaged by"
-  :line3: "<i>Noxious Beast</i> gains <b>Fatigue</b>."
-  :line4: ""
+  :line2: "Cannot be disengaged."
+  :line3: "<b>Round End</b>: The engaged"
+  :line4: "player suffers 1 damage."
 -
   :deck: "Enemy"
-  :title: "Wraith"
+  :title: "Ice Golem"
   :type: "Enemy"
-  :icon: "spark-spirit"
+  :icon: "ice-golem"
   :border_color: "#444"
-  :hp: "12"
-  :attack: "4"
+  :hp: "18"
+  :attack: "3"
   :line1: "<b>Hunter</b>: Least cards in hand"
-  :line2: "<b>Engage</b>: Gain <b>Fatigue</b>."
-  :line3: ""
-  :line4: ""
+  :line2: "While <i>Ice Golem</i> is alive,"
+  :line3: "the player engaged with it"
+  :line4: "cannot draw cards."
 -
   :deck: "Enemy"
   :title: "Black Guard"
@@ -160,7 +160,7 @@
   :deck: "Enemy"
   :title: "Warlord"
   :type: "Elite Enemy"
-  :icon: "battle-axe" # TODO
+  :icon: "overlord-helm"
   :border_color: "#444"
   :hp: "20"
   :attack: "4"
@@ -172,7 +172,7 @@
   :deck: "Enemy"
   :title: "Armored Bear"
   :type: "Elite Enemy"
-  :icon: "battle-axe" # TODO
+  :icon: "bear-head"
   :border_color: "#444"
   :hp: "22"
   :attack: "5"
