--- a/data/tairos/player_cards.yml
+++ b/data/tairos/player_cards.yml
@@ -9,7 +9,7 @@
   :border_color: "#b10"
   :line1: "<b>Attack 3</b>"
   :line2: "If the target attacked you"
-  :line3: "this round, <b>+2 Power</b>."
+  :line3: "this round, gain <b>+2 Power</b>."
   :line4: "<b>Combo</b>: <i>Cleave</i>"
   :line5: "<b>Attack 3</b>"
   :line6: "(target a different enemy)"
@@ -47,7 +47,7 @@
   :border_color: "#ccc"
   :line1: "<b>Attack 3</b>"
   :line2: "If you've taken no damage"
-  :line3: "this round, <b>+2 Power</b>."
+  :line3: "this round, gain <b>+2 Power</b>."
   :line4: "<b>Combo</b>: <i>Volley</i>"
   :line5: "<b>Attack All 2</b>"
   :line6: ""
@@ -87,7 +87,7 @@
   :line2: "The next attack on this enemy"
   :line3: "this round gains <b>+2 Power</b>."
   :line4: "<b>Combo</b>: <i>Flare</i>"
-  :line5: "<b>+2 Power</b>"
+  :line5: "This attack gains <b>+2 Power</b>."
   :line6: "<b>Draw 1</b>"
 -
   :deck: "Elementalist"
@@ -108,8 +108,8 @@
   :icon: "electric"
   :border_color: "#0ff"
   :line1: "<b>Attack All 1</b>"
-  :line2: "<b>+1 Power</b> for each <i>Shock</i>"
-  :line3: "in your discard."
+  :line2: "Spend 1-3 charges to gain"
+  :line3: "<b>+1 Power</b> per charge."
   :line4: "<b>Combo</b>: <i>Conduct</i>"
   :line5: "<b>Charge</b> this card and"
   :line6: "the card you played it with."
@@ -122,11 +122,11 @@
   :icon: "heart-plus"
   :border_color: "#492"
   :line1: "<b>Restore Ally 2</b> <i>multi-target</i>"
-  :line2: "Target ally may add one card"
-  :line3: "from their discard to their hand."
-  :line4: "<b>Combo</b>: <i>Strengthen</i>"
-  :line5: "Target ally gains <b>+3 Power</b>"
-  :line6: "on their next attack."
+  :line2: "Target ally may add one of their"
+  :line3: "discarded cards to their hand."
+  :line4: "<b>Combo</b>: <i>Empower</i>"
+  :line5: "Target ally may <b>Charge 2</b>."
+  :line6: ""
 -
   :deck: "Tactician"
   :title: "Inspire"
@@ -149,8 +149,8 @@
   :line2: "<b>Attack 3</b>"
   :line3: "(target the same enemy)"
   :line4: "If the target was already"
-  :line5: "attacked this round, <b>+2 Power</b>."
-  :line6: ""
+  :line5: "attacked this round, gain"
+  :line6: "<b>+2 Power</b>."
 
 ## SET TWO
 
@@ -161,12 +161,12 @@
   :type: "Action"
   :icon: "charging-bull"
   :border_color: "#f31"
-  :line1: "<b>Attack 3</b>"
-  :line2: "You may suffer 1 damage and"
-  :line3: "<b>Discard 1</b> to gain <b>+3 Power</b>."
+  :line1: "<b>Attack 5</b>"
+  :line2: "You suffer 1 damage. You may"
+  :line3: "<b>Discard 1</b> to gain <b>+2 Power</b>."
   :line4: "<b>Combo</b>: <i>Takedown</i>"
-  :line5: "Suffer 2 damage to gain"
-  :line6: "<b>+4 Power</b>."
+  :line5: "The target must engage with"
+  :line6: "you next round (ignore <b>Hunter</b>)."
 -
   :deck: "Brawler"
   :title: "Flurry"
@@ -204,7 +204,7 @@
   :line3: "If this defeats an enemy,"
   :line4: "<b>Charge</b> the enemy card."
   :line5: "<b>Combo</b>: <i>Syphon</i>"
-  :line6: "<b>Restore Self 2</b>"
+  :line6: "<b>Restore Self 3</b>"
 -
   :deck: "Shadow"
   :title: "Misdirect"
@@ -237,12 +237,12 @@
   :type: "Action"
   :icon: "hypersonic-bolt"
   :border_color: "#02f"
-  :line1: "<b>Attack 4</b>"
-  :line2: "This attack ignores <b>Block</b>."
-  :line3: ""
-  :line4: "<b>Combo</b>: <i>Channel</i>"
-  :line5: "<b>Draw 2</b>"
-  :line6: ""
+  :line1: "<b>Attack 3</b>"
+  :line2: "If the target has <b>Block</b>,"
+  :line3: "gain <b>+2 Power</b>."
+  :line4: "<b>Combo</b>: <i>Concentrate</i>"
+  :line5: "<b>Scry 2</b>"
+  :line6: "<b>Draw 2</b>"
 -
   :deck: "Arcanist"
   :title: "Protect"
@@ -264,9 +264,9 @@
   :line1: "<b>Attack 2</b> <i>multi-target</i>"
   :line2: "You may discard up to 2 cards"
   :line3: "to gain <b>+3 Power</b> per card."
-  :line4: "<b>Combo</b>: <i>Exhaust</i>"
-  :line5: "Suffer 3 damage to gain"
-  :line6: "<b>+5 Power</b>."
+  :line4: "<b>Combo</b>: <i>Conserve</i>"
+  :line5: "<b>Charge</b> the cards you"
+  :line6: "discarded for this attack."
 
 # Squire - GREEN
 -
@@ -277,10 +277,10 @@
   :border_color: "#4d4"
   :line1: "Play when an ally is attacked."
   :line2: "You may become the target."
-  :line3: "<b>Block 1</b>, <b>Attack 1</b>, and <b>Draw 1</b>"
+  :line3: "<b>Draw 1</b>, <b>Block 1</b>, and <b>Attack 1</b>"
   :line4: "(target the attacking enemy)"
   :line5: "<b>Combo</b>: <i>Intervene</i>"
-  :line6: "<b>+2 Block</b> and <b>+2 Power</b>"
+  :line6: "Gain <b>+2 Block</b> and <b>+2 Power</b>"
 -
   :deck: "Squire"
   :title: "Recover"
@@ -303,8 +303,8 @@
   :line2: "You may take another <b>Action</b>."
   :line3: "<i>once per round</i>"
   :line4: "<b>Combo</b>: <i>Gather</i>"
-  :line5: "Target ally may <b>Refresh</b>."
-  :line6: ""
+  :line5: "Target ally may refresh"
+  :line6: "one of their decks."
 
 ## SET THREE
 
@@ -315,12 +315,12 @@
   :type: "Action"
   :icon: "hammer-drop"
   :border_color: "#b10"
-  :line1: "<b>Attack 3</b>"
-  :line2: "The next ally to attack the target"
-  :line3: "this round may <b>Draw 1</b>."
+  :line1: "<b>Attack 4</b>"
+  :line2: "The next player to attack the"
+  :line3: "target this round may <b>Draw 1</b>."
   :line4: "<b>Combo</b>: <i>Pulverize</i>"
-  :line5: "Gain <b>+3 Power</b> and this attack"
-  :line6: "ignores enemy <b>Block</b>."
+  :line5: "The next attack on this enemy"
+  :line6: "this round deals <b>x2</b> damage."
 -
   :deck: "Juggernaut"
   :title: "Endure"
@@ -329,10 +329,10 @@
   :border_color: "#b10"
   :line1: "Play when you are attacked."
   :line2: "<b>Block 2</b>"
-  :line3: "If you have ≤ 8 HP, <b>+1 Block</b>."
-  :line4: "<b>Combo</b>: <i>Absorb</i>"
-  :line5: "<b>Draw 2</b>"
-  :line6: ""
+  :line3: "If you have 8 HP or less,"
+  :line4: "gain <b>+1 Block</b>."
+  :line5: "<b>Combo</b>: <i>Absorb</i>"
+  :line6: "<b>Draw 2</b>"
 -
   :deck: "Juggernaut"
   :title: "Swig"
@@ -340,11 +340,11 @@
   :icon: "brandy-bottle"
   :border_color: "#b10"
   :line1: "Play at the start of your turn."
-  :line2: "<b>Restore Self 1</b>"
-  :line3: "<b>Draw 1</b>"
-  :line4: "You may shuffle two of your"
-  :line5: "discarded cards other than"
-  :line6: "<i>Swig</i> into their deck."
+  :line2: "You may shuffle two of your"
+  :line3: "discarded cards other than"
+  :line4: "<i>Swig</i> into their deck."
+  :line5: "<b>Restore Self 1</b>"
+  :line6: "<b>Draw 1</b>"
 
 # Jackknife - BLACK
 -
@@ -366,11 +366,11 @@
   :icon: "dripping-blade"
   :border_color: "#ccc"
   :line1: "Play when you attack."
-  :line2: "This attack gains <b>+3 Power</b>"
+  :line2: "This attack gains <b>+2 Power</b>"
   :line3: "and ignores enemy <b>Block</b>."
-  :line4: "<b>Combo</b>: <i>Inject</i>"
-  :line5: "The next attack on this enemy"
-  :line6: "this round deals <b>x2</b> damage."
+  :line4: "<b>Combo</b>: <i>Splash</i>"
+  :line5: "Target adjacent enemy suffers"
+  :line6: "3 damage."
 -
   :deck: "Jackknife"
   :title: "Reposition"
@@ -380,9 +380,9 @@
   :line1: "Play when you engage"
   :line2: "an enemy."
   :line3: "<b>Draw 2</b>"
-  :line4: "<b>Combo</b>: <i>Trip</i>"
-  :line5: "Skip that enemy's attack"
-  :line6: "this round."
+  :line4: "<i>once per turn</i>"
+  :line5: "<b>Combo</b>: <i>Trip</i>"
+  :line6: "Skip that enemy's next attack."
 
 # Illusionist - BLUE
 -
@@ -393,7 +393,7 @@
   :border_color: "#02f"
   :line1: "<b>Attack 3</b>"
   :line2: "If the target has less than"
-  :line3: "10 HP, <b>+2 Power</b>."
+  :line3: "10 HP, gain <b>+2 Power</b>."
   :line4: "<b>Combo</b>: <i>Terrorize</i>"
   :line5: "If the target has less than 10 HP"
   :line6: "before your attack, defeat it."
@@ -500,43 +500,43 @@
   :line5: "<b>Combo</b>: <i>Maneuver</i>"
   :line6: "<b>Block 2</b> and <b>Draw 1</b>"
 
-# Swarmkeeper - BLACK
+# TODO - BLACK
 -
-  :deck: "Swarmkeeper"
-  :title: "Wasp / Sting"
-  :type: "Action"
-  :icon: "bee"
+  :deck: "TODO"
+  :title: "TODO"
+  :type: "TODO"
+  :icon: "battle-axe" # TODO
   :border_color: "#ccc"
-  :line1: "<b>Attack 3</b>"
-  :line2: "<b>Tuck</b>: At the end of each round,"
-  :line3: "this enemy suffers 1 damage."
-  :line4: "<b>Combo</b>: <i>Swarm</i>"
-  :line5: "<b>Tuck</b>: Ignore all <b>Block</b> and"
-  :line6: "<b>Hunter</b> abilities on this enemy."
--
-  :deck: "Swarmkeeper"
-  :title: "Mosquito / Bite"
-  :type: "Action"
-  :icon: "cigale"
-  :border_color: "#ccc"
-  :line1: "<b>Attack 4</b>"
-  :line2: "<b>Restore Self 1</b>"
+  :line1: "TODO"
+  :line2: ""
   :line3: ""
-  :line4: "<b>Combo</b>: <i>Transfuse</i>"
-  :line5: "<b>Restore Ally 2</b>"
+  :line4: ""
+  :line5: ""
   :line6: ""
 -
-  :deck: "Swarmkeeper"
-  :title: "Spider / Web"
-  :type: "Reaction"
-  :icon: "spider-web"
+  :deck: "TODO"
+  :title: "TODO"
+  :type: "TODO"
+  :icon: "battle-axe" # TODO
   :border_color: "#ccc"
-  :line1: "Play when an enemy attacks."
-  :line2: "<b>Block 1</b>"
-  :line3: "Anyone may become the target"
-  :line4: "of the attack."
-  :line5: "<b>Combo</b>: <i>Wrap</i>"
-  :line6: "Prevent the attack."
+  :line1: "TODO"
+  :line2: ""
+  :line3: ""
+  :line4: ""
+  :line5: ""
+  :line6: ""
+-
+  :deck: "TODO"
+  :title: "TODO"
+  :type: "TODO"
+  :icon: "battle-axe" # TODO
+  :border_color: "#ccc"
+  :line1: "TODO"
+  :line2: ""
+  :line3: ""
+  :line4: ""
+  :line5: ""
+  :line6: ""
 
 # Artificer - BLUE
 -
@@ -569,47 +569,47 @@
   :type: "Action"
   :icon: "battle-axe" # TODO
   :border_color: "#02f"
-  :line1: "<b>Restore Self 1</b>"
-  :line2: "You may swap your artifact"
-  :line3: "for an unused one."
-  :line4: "<b>Combo</b>: Construct"
-  :line5: "Gain an unused artifact."
-  :line6: ""
+  :line1: "<b>Scry 3</b>"
+  :line2: "<b>Restore Self 1</b>"
+  :line3: "You may swap your artifact"
+  :line4: "for an unused one."
+  :line5: "<b>Combo</b>: Construct"
+  :line6: "Gain an unused artifact."
 
-# TODO - GREEN
+# Swarmkeeper - GREEN
 -
-  :deck: "TODO"
-  :title: "TODO"
-  :type: "TODO"
-  :icon: "battle-axe" # TODO
+  :deck: "Swarmkeeper"
+  :title: "Wasp / Sting"
+  :type: "Action"
+  :icon: "bee"
   :border_color: "#4d4"
-  :line1: "TODO"
-  :line2: ""
-  :line3: ""
-  :line4: ""
-  :line5: ""
-  :line6: ""
+  :line1: "<b>Attack 3</b>"
+  :line2: "Gain <b>+1 Power</b> for each"
+  :line3: "<i>Wasp / Sting</i> in your discard"
+  :line4: "piles."
+  :line5: "<b>Combo</b>: <i>Swarm</i>"
+  :line6: "Refresh one of your decks."
 -
-  :deck: "TODO"
-  :title: "TODO"
-  :type: "TODO"
-  :icon: "battle-axe" # TODO
+  :deck: "Swarmkeeper"
+  :title: "Mosquito / Bite"
+  :type: "Action"
+  :icon: "cigale"
   :border_color: "#4d4"
-  :line1: "TODO"
-  :line2: ""
+  :line1: "<b>Attack 2</b>"
+  :line2: "<b>Restore Self 2</b>"
   :line3: ""
-  :line4: ""
-  :line5: ""
-  :line6: ""
+  :line4: "<b>Combo</b>: <i>Transfuse</i>"
+  :line5: "You suffer 1 damage."
+  :line6: "<b>Restore Ally 3</b>"
 -
-  :deck: "TODO"
-  :title: "TODO"
-  :type: "TODO"
-  :icon: "battle-axe" # TODO
+  :deck: "Swarmkeeper"
+  :title: "Spider / Web"
+  :type: "Reaction"
+  :icon: "spider-web"
   :border_color: "#4d4"
-  :line1: "TODO"
-  :line2: ""
-  :line3: ""
-  :line4: ""
-  :line5: ""
-  :line6: ""
+  :line1: "Play when an enemy attacks."
+  :line2: "<b>Block 1</b>"
+  :line3: "Anyone may become the target"
+  :line4: "of the attack."
+  :line5: "<b>Combo</b>: <i>Wrap</i>"
+  :line6: "Prevent the attack."
