--- a/data/tairos/races.yml
+++ b/data/tairos/races.yml
@@ -1,17 +1,13 @@
-# TODO: Need custom layout for Races
-# There is too much content...
-# Maybe two-sided layout?
-# => Setup on one side; Passive/Action on the other
 -
   :deck: "Race"
   :title: "Human"
   :type: "Race"
   :icon: "person"
-  :border_color: "#81e"
-  :line1: "<i>Game Start</i>: <b>Draw 1</b>, <b>Charge 1</b>"
-  :line2: "<i>Passive</i>"
-  :line3: "After you <b>Combo</b>, <b>Charge 1</b>."
-  :line4: "<i>Free Action</i> -  1 Charge"
+  :border_color: "#fff"
+  :line1: "<i>Game Start</i>: <b>Draw 2</b>"
+  :line2: "<i>Adaptive</i> — Passive"
+  :line3: "+2 max hand size"
+  :line4: "<i>Improvise</i> —  1 Charge"
   :line5: "<b>Draw 1</b> then <b>Discard 1</b>"
   :line6: "<i>once per turn</i>"
 -
@@ -19,11 +15,11 @@
   :title: "Elf"
   :type: "Race"
   :icon: "woman-elf-face"
-  :border_color: "#81e"
+  :border_color: "#fff"
   :line1: "<i>Game Start</i>: <b>Charge 2</b>"
-  :line2: "<i>Passive</i>"
-  :line3: "+1 max hand size"
-  :line4: "<i>Free Action</i> - 1 Charge"
+  :line2: "<i>Magical</i> — Passive"
+  :line3: "After you <b>Combo</b>, <b>Charge 1</b>."
+  :line4: "<i>Detect</i> — 1 Charge"
   :line5: "<b>Scry 1</b>"
   :line6: "<i>once per turn</i>"
 -
@@ -31,22 +27,22 @@
   :title: "Dwarf"
   :type: "Race"
   :icon: "dwarf-face"
-  :border_color: "#81e"
+  :border_color: "#fff"
   :line1: "<i>Game Start</i>: <b>+4 Health</b>"
-  :line2: "<i>Passive</i>"
+  :line2: "<i>Stubborn</i> — Passive"
   :line3: "Ignore enemy <b>Discard</b> effects."
-  :line4: "<i>Free Action</i> - 1 Charge"
-  :line5: "<b>+1 Attack</b> or <b>+1 Block</b>"
+  :line4: "<i>Exert</i> — 1 Charge"
+  :line5: "<b>+1 Power</b> or <b>+1 Block</b>"
   :line6: "<i>once per turn</i>"
 -
   :deck: "Race"
   :title: "Halfling"
   :type: "Race"
   :icon: "cement-shoes"
-  :border_color: "#81e"
-  :line1: "<i>Game Start</i>: <b>Draw 2</b>"
-  :line2: "<i>Passive</i>"
+  :border_color: "#fff"
+  :line1: "<i>Game Start</i>: <b>Draw 1</b>, <b>Charge 1</b>"
+  :line2: "<i>Nimble</i> — Passive"
   :line3: "After refreshing a deck, <b>Draw 1</b>."
-  :line4: "<i>Free Action</i> - 1 Charge"
+  :line4: "<i>Scurry</i> — 1 Charge"
   :line5: "Swap places with an ally."
   :line6: "<i>once per turn</i>"
